--- a/templates/security/reset_password.html.twig
+++ b/templates/security/reset_password.html.twig
@@ -8,37 +8,32 @@
 
 {% block body %}
 	<div class="container accueil">
-
-		<div class="row">
-			<div class="col text-center mt-5 title">RÉINITIALISATION DU MOT DE PASSE OUBLIE</div>
-		</div>
-		<div class="row justify-content-center align-items-center mt-4">
-			<div class="col-8 col-md-6 col-lg-4 text-center mt-4">
-				<form method="post">
-					<div class="row justify-content-center mt-4">
-						<div class="col-10 m-3 text-center">
-							<input type="password" name="password" id="inputPassword" class="form-control col-12" placeholder="Mot de passe" required>
-							<span toggle="#password-field" class="fas fa-eye-slash field-icon toggle-password icon-eye-size"></span>
-						</div>
-					</div>
-					<div class="row justify-content-center mt-4">
-						<div class="col-10 m-3 text-center">
-							<input type="hidden" name="token" value="{{ token }}">
-							<button class="btn btn-lg btn-custom-border" type="submit" id="valider">
-								Valider le mot de passe
-							</button>
-						</div>
-					</div>
-				</form>
+		<main>
+			<div class="row">
+				<div class="col text-center mt-5 title">RÉINITIALISATION DU MOT DE PASSE OUBLIE</div>
 			</div>
-		</div>
-
-
-		<div class="row d-flex justify-content-center logoLogin">
-			<div class="col-3 col-md-2 col-lg-2 mt-3">
-				<img class="card-img" src="/img/JUL.png" alt="sign logo">
+			<div class="row justify-content-center align-items-center mt-4">
+				<div class="col-8 col-md-6 col-lg-4 text-center mt-4">
+					<form method="post">
+						<div class="row justify-content-center mt-4">
+							<div class="col-10 m-3 text-center">
+								<input type="password" name="password" id="inputPassword" class="form-control col-12" placeholder="Mot de passe" required>
+								<span toggle="#password-field" class="fas fa-eye-slash field-icon toggle-password icon-eye-size"></span>
+							</div>
+						</div>
+						<div class="row justify-content-center mt-4">
+							<div class="col-10 m-3 text-center">
+								<input type="hidden" name="token" value="{{ token }}">
+								<button class="btn btn-lg btn-custom-border" type="submit" id="valider">
+									Valider le mot de passe
+								</button>
+							</div>
+						</div>
+					</form>
+				</div>
 			</div>
-		</div>
+		</main>
+		{% include "footer.html.twig" %}
 	</div>
 
 {% endblock %}
