--- a/templates/bundles/TwigBundle/Exception/error403.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error403.html.twig
@@ -8,53 +8,50 @@
 
 {% block body %}
 	<div class="container accueil">
-		<div class="row">
-			<div class="col text-center mt-3 title">
-				<div>Oups...  Cette page n'existe pas !</div>
+		<main>
+			<div class="row">
+				<div class="col text-center mt-3 title">
+					<div>Oups...  Cette page n'existe pas !</div>
+				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col text-center mt-3">
-				<div>La page que vous recherchez n'existe pas.</div>
+			<div class="row">
+				<div class="col text-center mt-3">
+					<div>La page que vous recherchez n'existe pas.</div>
+				</div>
 			</div>
-		</div>
-		<div class="row justify-content-center align-itms-center">
-			<div class="col text-center mt-3">
-				<div class="grid-item m-5"></div>
-				<div class="grid-item grid-item--width2 grid-item--height3 m-5"></div>
-				<div class="grid-item grid-item--height2 m-5"></div>
-				<div class="grid-item grid-item--height2 m-5"></div>
-				<div class="grid-item grid-item--width3 m-5"></div>
-				<div class="grid-item m-5"></div>
-				<div class="grid-item m-5"></div>
-				<div class="grid-item grid-item--height2 m-5"></div>
-				<div class="grid-item grid-item--width2 grid-item--height3 m-5"></div>
-				<div class="grid-item m-5"></div>
-				<div class="grid-item grid-item--height2 m-5"></div>
-				<div class="grid-item m-5"></div>
-				<div class="grid-item grid-item--height2 m-5"></div>
-				<div class="grid-item grid-item--width2 m-5"></div>
-				<div class="grid-item m-5"></div>
-				<div class="grid-item grid-item--height2 m-5"></div>
-				<div class="grid-item m-5"></div>
-				<div class="grid-item m-5"></div>
-				<div class="grid-item grid-item--height3 m-5"></div>
-				<div class="grid-item grid-item--height2 m-5"></div>
-				<div class="grid-item m-5"></div>
-				<div class="grid-item grid-item--height2 m-5"></div>
-				<div class="grid-item m-5"></div>
-				<div class="grid-item m-5"></div>
+			<div class="row justify-content-center align-itms-center">
+				<div class="col text-center mt-3">
+					<div class="grid-item m-5"></div>
+					<div class="grid-item grid-item--width2 grid-item--height3 m-5"></div>
+					<div class="grid-item grid-item--height2 m-5"></div>
+					<div class="grid-item grid-item--height2 m-5"></div>
+					<div class="grid-item grid-item--width3 m-5"></div>
+					<div class="grid-item m-5"></div>
+					<div class="grid-item m-5"></div>
+					<div class="grid-item grid-item--height2 m-5"></div>
+					<div class="grid-item grid-item--width2 grid-item--height3 m-5"></div>
+					<div class="grid-item m-5"></div>
+					<div class="grid-item grid-item--height2 m-5"></div>
+					<div class="grid-item m-5"></div>
+					<div class="grid-item grid-item--height2 m-5"></div>
+					<div class="grid-item grid-item--width2 m-5"></div>
+					<div class="grid-item m-5"></div>
+					<div class="grid-item grid-item--height2 m-5"></div>
+					<div class="grid-item m-5"></div>
+					<div class="grid-item m-5"></div>
+					<div class="grid-item grid-item--height3 m-5"></div>
+					<div class="grid-item grid-item--height2 m-5"></div>
+					<div class="grid-item m-5"></div>
+					<div class="grid-item grid-item--height2 m-5"></div>
+					<div class="grid-item m-5"></div>
+					<div class="grid-item m-5"></div>
+				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col text-center mt-3"></div>
-		</div>
-
-		<div class="row d-flex justify-content-center">
-			<div class="col-3 col-md-2 col-lg-2 mt-3">
-				<img class="card-img" src="/img/JUL.png" alt="sign logo">
+			<div class="row">
+				<div class="col text-center mt-3"></div>
 			</div>
-		</div>
+		</main>
+		{% include "footer.html.twig" %}
 	</div>
 {% endblock %}
 {% block javascripts %}
