--- a/templates/security/forgotten_password.html.twig
+++ b/templates/security/forgotten_password.html.twig
@@ -8,27 +8,23 @@
 
 {% block body %}
 	<div class="container accueil">
-		<div class="row">
-			<div class="col text-center mt-5 title">MOT DE PASSE OUBLIE</div>
-		</div>
-		{{ form_start(form) }}
-		<div class="row justify-content-center mt-4">
-			<div class="col-8 col-md-6 col-lg-4 text-center">
-				{{ form_widget(form.email) }}
+		<main>
+			<div class="row">
+				<div class="col text-center mt-5 title">MOT DE PASSE OUBLIE</div>
 			</div>
-		</div>
-		<div class="row justify-content-center mt-4">
-			<div class="col-8 col-md-6 col-lg-4 text-center">
-				{{ form_widget(form.envoyer) }}
+			{{ form_start(form) }}
+			<div class="row justify-content-center mt-4">
+				<div class="col-8 col-md-6 col-lg-4 text-center">
+					{{ form_widget(form.email) }}
+				</div>
 			</div>
-		</div>
-		{{ form_end(form) }}
-
-
-		<div class="row d-flex justify-content-center logoLogin">
-			<div class="col-3 col-md-2 col-lg-2 mt-3">
-				<img class="card-img" src="/img/JUL.png" alt="sign logo">
+			<div class="row justify-content-center mt-4">
+				<div class="col-8 col-md-6 col-lg-4 text-center">
+					{{ form_widget(form.envoyer) }}
+				</div>
 			</div>
-		</div>
+			{{ form_end(form) }}
+		</main>
+		{% include "footer.html.twig" %}
 	</div>
 {% endblock %}
