--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -9,70 +9,68 @@
 {% block body %}
 	{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
 		<div class="container accueil">
-			<div class="row">
-				<div class="col text-center mt-3 title d-md-none">
-					<div>COMPTE</div>
+			<main>
+				<div class="row">
+					<div class="col text-center mt-3 title d-md-none">
+						<div>COMPTE</div>
+					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col text-center mt-3"></div>
-			</div>
-			<div class="row justify-content-center">
-				<div class="col-12 text-center mt-3">
-					{{ app.user.email }}
+				<div class="row">
+					<div class="col text-center mt-3"></div>
 				</div>
-				<div class="col-12 text-center mt-3 title">
-					<div>COMMANDES</div>
-				</div>
-				<div class="col-12 text-center mt-3">
-					{% if app.user.orderStripes|length > 0 %}
-						<table class="table text-white">
-							<thead>
-								<tr>
-									<th scope="col">&nbsp;N °&nbsp;</th>
-									<th scope="col">Création</th>
-									<th scope="col">Date</th>
-									<th scope="col">Prix</th>
-									<th scope="col">Envoyée</th>
-								</tr>
-							</thead>
-							<tbody>
-								{% for orderStripe in app.user.orderStripes %}
-									{% if orderStripe.getIsSent == false %}
-										<tr class='table-row' data-href='{{ path('user_order' , {'reference':orderStripe.reference} ) }}' data-toggle="tooltip" data-placement="bottom" title="Modifier l'adresse de livraison commande N°{{ loop.index }}">
-											<th scope="row">{{ loop.index }}</th>
-											<td>{{orderStripe.product}}</td>
-											<td>{{orderStripe.getCreatedAt|date('d-m-Y')}}</td>
-											<td>{{orderStripe.price}}&nbsp;€</td>
-											<td>
-												<i class="text-warning fas fa-times"></i>
-											</td>
-										</tr>
-									{% else %}
-										<tr>
-											<td scope="row">{{ loop.index }}</td>
-											<td>{{orderStripe.product}}</td>
-											<td>{{orderStripe.getCreatedAt|date('d-m-Y')}}</td>
-											<td>{{orderStripe.price}}&nbsp;€</td>
-											<td>
-												<i class="text-success fas fa-check"></i>
-											</td>
-										</tr>
+				<div class="row justify-content-center">
+					<div class="col-12 text-center mt-3">
+						{{ app.user.email }}
+					</div>
+					<div class="col-12 text-center mt-3 title">
+						<div>COMMANDES</div>
+					</div>
+					<div class="col-12 text-center mt-3">
+						{% if app.user.orderStripes|length > 0 %}
+							<table class="table text-white">
+								<thead>
+									<tr>
+										<th scope="col">&nbsp;N °&nbsp;</th>
+										<th scope="col">Création</th>
+										<th scope="col">Date</th>
+										<th scope="col">Prix</th>
+										<th scope="col">Envoyée</th>
 									</tr>
-								{% endif %}
-							{% endfor %}
-						</tbody>
-					</table>
-				</div>
-				<div class="border border-white p-4 text-center">Vous avez la possibilité de modifier l'adresse de livraison de votre commande, en cliquant sur celle-ci, tant qu'elle n'est pas envoyée.</div>
-			{% else %}
-				<div class="border border-white p-4 text-center">Vous n'avez pas encore commandé de création.</div>
-			{% endif %}
-			<div class="row d-flex justify-content-center logoSpec">
-				<div class="col-3 col-md-2 col-lg-2 mt-3">
-					<img class="card-img" src="/img/JUL.png" alt="sign logo">
-				</div>
-			</div>
+								</thead>
+								<tbody>
+									{% for orderStripe in app.user.orderStripes %}
+										{% if orderStripe.getIsSent == false %}
+											<tr class='table-row' data-href='{{ path('user_order' , {'reference':orderStripe.reference} ) }}' data-toggle="tooltip" data-placement="bottom" title="Modifier l'adresse de livraison commande N°{{ loop.index }}">
+												<th scope="row">{{ loop.index }}</th>
+												<td>{{orderStripe.product}}</td>
+												<td>{{orderStripe.getCreatedAt|date('d-m-Y')}}</td>
+												<td>{{orderStripe.price}}&nbsp;€</td>
+												<td>
+													<i class="text-warning fas fa-times"></i>
+												</td>
+											</tr>
+										{% else %}
+											<tr>
+												<td scope="row">{{ loop.index }}</td>
+												<td>{{orderStripe.product}}</td>
+												<td>{{orderStripe.getCreatedAt|date('d-m-Y')}}</td>
+												<td>{{orderStripe.price}}&nbsp;€</td>
+												<td>
+													<i class="text-success fas fa-check"></i>
+												</td>
+											</tr>
+										</tr>
+									{% endif %}
+								{% endfor %}
+							</tbody>
+						</table>
+					</div>
+					<div class="border border-white p-4 text-center">Vous avez la possibilité de modifier l'adresse de livraison de votre commande, en cliquant sur celle-ci, tant qu'elle n'est pas envoyée.</div>
+				{% else %}
+					<div class="border border-white p-4 text-center">Vous n'avez pas encore commandé de création.</div>
+				{% endif %}
+			</main>
+			{% include "footer.html.twig" %}
 		</div>
 	{% endif %}
 {% endblock %}
