--- a/templates/user/payment.html.twig
+++ b/templates/user/payment.html.twig
@@ -8,58 +8,49 @@
 
 {% block body %}
 	<div class="container accueil">
-		<div class="row">
-			<div class="col text-center mt-3 title">
-				<div>ACHETER</div>
-			</div>
-		</div>
-		<section>
-
-			<div class="row justify-content-center">
-				<div class="col-10 col-md-6 col-lg-4 mt-3">
-
-					<div class="card-img imgProduct mx-auto p-4">
-						<img src="/img/uploads/{{ product.img }}" class="card-img-top" alt="{{ product.img }}">
-						<div class="card-body">
-							<h5 class="card-title">{{ product.name }}</h5>
-							<p class="card-text">
-								{% if product.description|e|length > 50 %}
-									{{ product.description|e|nl2br|striptags|slice(0, 50) ~ '...' }}
-								{% else %}
-									{{ product.description|e|nl2br }}
-								{% endif %}
-							</p>
-							{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-								<div class="text-center">
-									<form action="{{ path('user_checkout' , {'slug':product.slug} )}}" method="POST">
-										<button type="submit" id="checkout-button" class="btn btn-custom-border mt-3">Paiement
-											{{product.price}}
-											€</button>
-									</form>
-								</div>
-							{% endif %}
-						</div>
-					</div>
-
+		<main>
+			<div class="row">
+				<div class="col text-center mt-3 title">
+					<div>ACHETER</div>
 				</div>
 			</div>
-
-		</section>
-
-		<div class="row justify-content-center">
-			<div class="col-12 text-center mt-3">
-				<a href="{{ path('creations')}}">
-					<button class="btn btn-custom">Revenir aux créations</button>
-				</a>
+			<section>
+				<div class="row justify-content-center">
+					<div class="col-10 col-md-6 col-lg-4 mt-3">
+						<div class="card-img imgProduct mx-auto p-4">
+							<img src="/img/uploads/{{ product.img }}" class="card-img-top" alt="{{ product.img }}">
+							<div class="card-body">
+								<h5 class="card-title">{{ product.name }}</h5>
+								<p class="card-text">
+									{% if product.description|e|length > 50 %}
+										{{ product.description|e|nl2br|striptags|slice(0, 50) ~ '...' }}
+									{% else %}
+										{{ product.description|e|nl2br }}
+									{% endif %}
+								</p>
+								{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+									<div class="text-center">
+										<form action="{{ path('user_checkout' , {'slug':product.slug} )}}" method="POST">
+											<button type="submit" id="checkout-button" class="btn btn-custom-border mt-3">Paiement
+												{{product.price}}
+												€</button>
+										</form>
+									</div>
+								{% endif %}
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<div class="row justify-content-center">
+				<div class="col-12 text-center mt-3">
+					<a href="{{ path('creations')}}">
+						<button class="btn btn-custom">Revenir aux créations</button>
+					</a>
+				</div>
 			</div>
-		</div>
-
-
-		<div class="row d-flex justify-content-center logoSpec">
-			<div class="col-3 col-md-2 col-lg-2 mt-3">
-				<img class="card-img" src="/img/JUL.png" alt="sign logo">
-			</div>
-		</div>
+		</main>
+		{% include "footer.html.twig" %}
 	</div>
 {% endblock %}
 {% block javascripts %}
