--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,10 @@
-[class^="col"] {
+/* [class^="col"] {
   border: 1px solid rgb(212, 95, 95)!important;
 }
 
 [class^="row"] {
   border: 1px solid yellow!important;
-}
+} */
 
 * { box-sizing: border-box; }
 
@@ -195,12 +195,7 @@ color: RED;
   max-width: 100px;
 }
 
-.logoSpec {
-  position: relative;
-  bottom: calc(-45vh);
-}
-
-.logoLogin {
+.footer {
   position: relative;
   bottom: calc(-55vh);
 }
