--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,5 +1,5 @@
 <footer>
-	<div class="row d-flex justify-content-center">
+	<div class="row d-flex justify-content-center mt-5 footer">
 		<div class="col-3 col-md-2 col-lg-2 mt-3 logoFooter">
 			<img class="card-img" src="/img/JUL.png" alt="sign logo">
 		</div>
